<resources>
    <string name="app_name">GigrangMVVM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_email">Email</string>
    <string name="txt_enter_email">Enter email</string>
    <string name="txt_password">Password</string>
    <string name="txt_login">Login</string>
    <string name="txt_forgot_password">Forgot Password</string>
    <string name="txt_dont_account">Don\'t have account?</string>
    <string name="txt_sign_up_here">SignUp here</string>
    <string name="txt_or">Or</string>
    <string name="err_mail_mandatory">Email is mandatory!</string>
    <string name="err_mail_invalid">Please enter valid mail id!</string>
    <string name="err_password_mandatory">Please enter password!</string>
    <string name="err_password_length">Password is too short!</string>
</resources>