<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewmodel"
            type="com.ankitdubey021.gigrangmvvm.screens.auth.login.LoginViewModel" />
    </data>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.auth.login.Login">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/_12ssp"
                        android:layout_marginStart="@dimen/_30sdp"
                        android:text="@string/txt_email"
                        android:fontFamily="@font/gt_walsheim_pro_bold_regular"/>

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:layout_marginEnd="@dimen/_15sdp"
                        app:cardCornerRadius="@dimen/_18sdp"
                        app:cardElevation="@dimen/_2sdp"
                        app:cardPreventCornerOverlap="true">



                        <EditText
                            android:text="@={viewmodel.mail}"
                            android:id="@+id/edtEmail"
                            android:paddingStart="@dimen/_15sdp"
                            android:paddingLeft="@dimen/_15sdp"
                            android:layout_marginTop="@dimen/_8sdp"
                            android:layout_marginBottom="@dimen/_8sdp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:fontFamily="@font/notosanc_regular"
                            android:hint="@string/txt_enter_email"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress"
                            android:singleLine="true"
                            android:maxLength="40"
                            android:textColor="@color/colorBlack"
                            android:textColorHint="@android:color/darker_gray"
                            android:textSize="@dimen/_14ssp" />


                    </com.google.android.material.card.MaterialCardView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/_12ssp"
                        android:layout_marginStart="@dimen/_30sdp"
                        android:text="@string/txt_password"
                        android:fontFamily="@font/gt_walsheim_pro_bold_regular"/>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:layout_marginEnd="@dimen/_15sdp"
                        app:cardUseCompatPadding="false">

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_8sdp"
                            android:layout_marginBottom="@dimen/_8sdp">

                            <EditText
                                android:text="@={viewmodel.password}"
                                android:id="@+id/edtPassword"
                                style="@style/tvNotoSansRegular"
                                android:layout_width="match_parent"
                                android:layout_gravity="center"
                                android:background="@null"
                                android:layout_weight="1"
                                android:hint="Enter new password"
                                android:imeOptions="actionNext"
                                android:inputType="textPassword"
                                android:paddingStart="@dimen/_15sdp"
                                android:paddingLeft="@dimen/_15sdp"
                                android:maxLength="20"
                                android:singleLine="true"
                                android:textColor="@color/colorBlack"
                                android:textSize="@dimen/_14ssp" />

                            <ImageView
                                android:id="@+id/hideUnhidePassword"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:paddingEnd="@dimen/_10sdp"
                                android:paddingRight="@dimen/_10sdp"
                                android:src="@drawable/ic_unhide_eye" />

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/login_btn"
                        android:onClick="@{()->viewmodel.validate()}"
                        style="@style/tvNotoSansMedium"
                        android:layout_width="match_parent"
                        android:layout_marginLeft="@dimen/_15sdp"
                        android:layout_marginTop="@dimen/_25sdp"
                        android:layout_marginRight="@dimen/_15sdp"
                        android:layout_marginBottom="@dimen/_15sdp"
                        android:padding="@dimen/_8sdp"
                        app:cornerRadius="@dimen/_20sdp"
                        android:gravity="center"
                        android:fontFamily="@font/notosanc_medium"
                        android:text="@string/txt_login"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/_14ssp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/forgotPwd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAllCaps="false"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="@dimen/_14ssp"
                        android:text="@string/txt_forgot_password"
                        android:fontFamily="@font/notosanc_medium"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/_14ssp"
                        android:text="@string/txt_or"
                        android:visibility="gone"
                        android:fontFamily="@font/notosanc_regular"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_48sdp"
                        android:layout_gravity="center"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/_14ssp"
                        android:text="@string/txt_dont_account"
                        android:fontFamily="@font/notosanc_regular"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/sign_up"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAllCaps="false"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/_14ssp"
                        android:layout_gravity="center"
                        android:text="@string/txt_sign_up_here"
                        android:fontFamily="@font/notosanc_medium"/>


                </LinearLayout>

</RelativeLayout>
</layout>